--- a/index.html
+++ b/index.html
@@ -8,8 +8,5 @@
 
     <title>JavaScript Fundamentals</title>
   </head>
-  <body>
-    <h1>Hello, JavaScript</h1>
-    <button>Press me</button>
-  </body>
+  <body></body>
 </html>
